# tau-lang

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  LLVMConfig.cmake  Makefile  OSDetectConfig.cmake  README.md  TODO.md  TauConfig.cmake  main.tau
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: cmake-build-and-test.yml
cmake/: CodeCoverageConfig.cmake  LLVMConfig.cmake  OSDetectConfig.cmake  TauConfig.cmake  TestConfig.cmake
doc/: coding-guidelines.md  name-mangling.ebnf  syntax.ebnf
inc/: allocator.h  analyzer.h  analzyer.h  arena.h  ast.h  base.h  bytecode.h  cli.h  compiler.h  crumb.h  diagnostics.h  esc_seq.h  file.h  forward_decls.h  generator.h  hash.h  lexer.h  list.h  llvm.h  location.h  log.h  memtrace.h  op.h  opcode.h  parser.h  queue.h  register.h  set.h  shyd.h  stack.h  str.h  str_view.h  suppress_warnings.h  symbol.h  symtable.h  tasm.h  timer.h  token.h  typebuilder.h  typedefs.h  (+7 more)
inc/ast/: ast.h  callconv.h  id.h  nameres.h  node.h  poison.h  prog.h  registry.h  use.h
inc/ast/decl/: decl.h  enum.h  enum_constant.h  fun.h  mod.h  param.h  struct.h  type_alias.h  union.h  var.h
inc/ast/expr/: decl.h  expr.h  id.h
inc/ast/generic/: generic.h  param.h
inc/ast/path/: access.h  alias.h  list.h  segment.h  wildcard.h
inc/ast/stmt/: block.h  break.h  continue.h  defer.h  do_while.h  expr.h  for.h  if.h  loop.h  return.h  stmt.h  while.h
inc/ast/type/: array.h  const.h  decl.h  fun.h  id.h  mat.h  mbr.h  modif.h  mut.h  opt.h  prim.h  ptr.h  ref.h  type.h  type_type.h  vec.h
inc/compiler/: compiler.h  environment.h  options.h
inc/linker/: gcc.h  linker.h  msvc.h
inc/stages/analysis/: analyzer.h  ctrlflow.h  nameres.h  symtable.h  typebuilder.h  typecheck.h  typedesc.h  typetable.h
inc/stages/analyzer/: analyzer.h  symtable.h  typebuilder.h  typedesc.h  typetable.h
inc/stages/codegen/: codegen.h  generator.h  utils.h
inc/stages/lexer/: lexer.h  location.h  token.h
inc/stages/parser/: callconv.h  parser.h  shyd.h
inc/utils/: alignof.h  assert.h  c_std.h  clearobj.h  common.h  compiler_detect.h  countof.h  crumb.h  debugbreak.h  diagnostics.h  error.h  esc_seq.h  extern_c.h  hash.h  ignore.h  max_align.h  minmax.h  noop.h  noreturn.h  offsetof.h  os_detect.h  os_detect.h.in  str.h  str_view.h  suppress_warnings.h  swap.h  timer.h  unreachable.h  unused.h
inc/utils/collections/: list.h  queue.h  set.h  stack.h  vector.h
inc/utils/concurrency/: barrier.h  condvar.h  future.h  latch.h  mutex.h  semaphore.h  thread.h
inc/utils/io/: argparse.h  cli.h  command.h  (+3 more)
src/: CMakeLists.txt  allocator.c  analyzer.c  analzyer.c  arena.c  ast.c  bytecode.c  cli.c  compiler.c  crumb.c  diagnostics.c  file.c  generator.c  hash.c  lexer.c  list.c  llvm.c  location.c  log.c  main.c  memtrace.c  op.c  opcode.c  parser.c  queue.c  register.c  set.c  shyd.c  stack.c  str.c  str_view.c  symbol.c  symtable.c  tasm.c  timer.c  token.c  typebuilder.c  typedesc.c  types.c  typeset.c  (+3 more)
src/ast/: callconv.c  id.c  nameres.c  node.c  poison.c  prog.c  registry.c  use.c
src/ast/decl/: enum.c  enum_constant.c  fun.c  mod.c  param.c  struct.c  type_alias.c  union.c  var.c
src/ast/decl/generic/: fun.c  generic.c  param.c
src/ast/expr/: decl.c  id.c
src/ast/expr/generic/: spec.c
src/ast/expr/lit/: bool.c  char.c  flt.c  int.c  mat.c  null.c  str.c  vec.c
src/ast/expr/op/: bin.c  call.c  op.c  spec.c  un.c
src/ast/expr/op/un/: addr.c  alignof.c  ind.c  sizeof.c  un.c  unwrap_safe.c  unwrap_unsafe.c
src/ast/expr/op/un/arit/: dec_post.c  dec_pre.c  inc_post.c  inc_pre.c  neg.c  pos.c
src/ast/expr/op/un/bit/: not.c
src/ast/expr/op/un/logic/: not.c
src/ast/generic/: generic.c  param.c
src/ast/path/: access.c  alias.c  list.c  segment.c  wildcard.c
src/ast/stmt/: block.c  break.c  continue.c  defer.c  do_while.c  expr.c  for.c  if.c  loop.c  return.c  while.c
src/ast/type/: array.c  const.c  decl.c  fun.c  id.c  mat.c  mbr.c  mut.c  opt.c  prim.c  ptr.c  ref.c  type_type.c  vec.c
src/ast/type/modif/: array.c  const.c  mut.c  opt.c  ptr.c  ref.c
src/compiler/: compiler.c  environment.c  options.c
src/linker/: gcc.c  linker.c  msvc.c
src/stages/analysis/: analyzer.c  ctrlflow.c  nameres.c  symtable.c  typebuilder.c  typecheck.c  typedesc.c  typetable.c
src/stages/analysis/types/: typebuilder.c  typecheck.c  typetable.c
src/stages/analysis/types/typedesc/: array.c  base.c  const.c  enum.c  fun.c  mat.c  mut.c  null.c  opt.c  poison.c  prim.c  ptr.c  ref.c  struct.c  union.c  var.c  vec.c
src/stages/analyzer/: analyzer.c  symtable.c  typebuilder.c  typedesc.c  typetable.c
src/stages/codegen/: codegen.c  generator.c  utils.c
src/stages/lexer/: lexer.c  location.c  token.c
src/stages/lexer/token/: registry.c  token.c
src/stages/parser/: callconv.c  op.c  parser.c  shyd.c
src/stages/parser/ast/: ast.c  id.c  node.c  prog.c
src/stages/parser/ast/decl/: enum.c  enum_constant.c  fun.c  mod.c  param.c  struct.c  union.c  var.c
src/stages/parser/ast/expr/: decl.c
src/stages/parser/ast/expr/lit/: bool.c  char.c  flt.c  int.c  null.c  str.c
src/stages/parser/ast/expr/op/: bin.c  call.c  op.c  un.c
src/stages/parser/ast/stmt/: block.c  break.c  continue.c  defer.c  expr.c  for.c  if.c  return.c  while.c
src/stages/parser/ast/type/: array.c  const.c  decl.c  fun.c  mbr.c  mut.c  opt.c  prim.c  ptr.c  ref.c
src/utils/: crumb.c  diagnostics.c  error.c  hash.c  str.c  str_view.c  timer.c
src/utils/collections/: list.c  queue.c  set.c  stack.c  vector.c
src/utils/concurrency/: barrier.c  condvar.c  future.c  latch.c  mutex.c  semaphore.c  thread.c
src/utils/io/: argparse.c  cli.c  command.c  file.c  log.c  path.c
src/utils/memory/: allocator.c  arena.c  memtrace.c
test/: CMakeLists.txt  arena_test.c  command_test.c  condvar_test.c  hash_test.c  lexer_test.c  list_test.c  mutex_test.c  opcode_test.c  queue_test.c  register_test.c  set_test.c  stack_test.c  str_test.c  str_view_test.c  tasm_test.c  test.h  thread_test.c  typedesc_test.c  vector_test.c  vm_test.c
(+119 files in other folders)
